--- a/HMSBl/bin/login_ui/ChooseType.fxml
+++ b/HMSBl/bin/login_ui/ChooseType.fxml
@@ -13,7 +13,7 @@
          <effect>
             <ImageInput>
                <source>
-                  <Image url="file:/F:/大二上/SE2/朱晨乾/按钮第一部分/普通会员.png" />
+                  <Image url="@普通会员.png" />
                </source>
             </ImageInput>
          </effect></Button>
@@ -21,7 +21,7 @@
          <effect>
             <ImageInput>
                <source>
-                  <Image url="file:/F:/大二上/SE2/朱晨乾/按钮第一部分/企业会员.png" />
+                  <Image url="@企业会员.png" />
                </source>
             </ImageInput>
          </effect></Button>
