--- a/HMSUserClient/src/user_main_ui/PastHotelInfo.fxml
+++ b/HMSUserClient/src/user_main_ui/PastHotelInfo.fxml
@@ -1,69 +1,112 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
-<?import javafx.scene.image.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
-	<!-- TODO Add Nodes -->
-<children>
-      <SplitPane dividerPositions="0.14705882352941177" layoutX="96.0" layoutY="78.0" prefHeight="450.0" prefWidth="750.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-        <items>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" snapToPixel="false">
-               <children>
-                  <ImageView fitHeight="66.0" fitWidth="70.0" layoutX="19.0" layoutY="41.0" pickOnBounds="true" preserveRatio="true" />
-                  <Label layoutX="22.0" layoutY="14.0" text="User Name" />
-                  <Accordion layoutY="166.0" prefHeight="114.0" prefWidth="107.0" AnchorPane.bottomAnchor="168.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="166.0">
-                    <panes>
-                      <TitledPane alignment="CENTER" animated="false" collapsible="false" text="首页" />
-                      <TitledPane alignment="CENTER" animated="false" collapsible="false" text="个人资料" />
-                        <TitledPane alignment="CENTER" animated="false" collapsible="false" layoutX="10.0" layoutY="33.0" text="信用记录" />
-                        <TitledPane alignment="CENTER" animated="false" collapsible="false" layoutX="10.0" layoutY="56.0" text="订单信息" />
-                        <TitledPane alignment="CENTER" animated="false" collapsible="false" layoutX="10.0" layoutY="79.0" text="过往酒店信息" />
-                    </panes>
-                  </Accordion>
-               </children>
-            </AnchorPane>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" snapToPixel="false">
-               <children>
-                  <TabPane layoutX="131.0" layoutY="70.0" prefHeight="378.0" prefWidth="635.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="70.0">
-                    <tabs>
-                      <Tab text="所有">
-                        <content>
-                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                        </content>
-                      </Tab>
-                      <Tab text="未执行">
-                        <content>
-                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                        </content>
-                      </Tab>
-                        <Tab text="已执行">
-                           <content>
-                              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                           </content>
-                        </Tab>
-                        <Tab text="已撤销">
-                           <content>
-                              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                           </content>
-                        </Tab>
-                        <Tab text="异常">
-                           <content>
-                              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                           </content>
-                        </Tab>
-                    </tabs>
-                  </TabPane>
-                  <TextField layoutX="174.0" layoutY="22.0" prefHeight="23.0" prefWidth="217.0" promptText="输入酒店名" />
-                  <Button layoutX="443.0" layoutY="22.0" mnemonicParsing="false" text="搜索" />
-               </children>
-            </AnchorPane>
-        </items>
-      </SplitPane>
-   </children>	
-	
+<AnchorPane prefHeight="448.0" prefWidth="635.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <TextField layoutX="172.0" layoutY="23.0" prefHeight="23.0" prefWidth="217.0" promptText="输入酒店名" />
+      <TabPane prefHeight="378.0" prefWidth="635.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="70.0">
+         <tabs>
+            <Tab text="所有">
+               <content>
+                  <ScrollPane prefHeight="302.0" prefWidth="576.0">
+                     <content>
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="373.0" prefWidth="616.0">
+                           <children>
+                              <TreeTableView prefHeight="378.0" prefWidth="572.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                 <columns>
+                                    <TreeTableColumn prefWidth="331.0" text="酒店名" />
+                                    <TreeTableColumn prefWidth="117.0" text="订单数" />
+                                    <TreeTableColumn prefWidth="167.0" text="操作" />
+                                 </columns>
+                              </TreeTableView>
+                           </children>
+                        </AnchorPane>
+                     </content>
+                  </ScrollPane>
+               </content>
+            </Tab>
+            <Tab text="未执行">
+               <content>
+                  <ScrollPane prefHeight="302.0" prefWidth="576.0">
+                     <content>
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="373.0" prefWidth="616.0">
+                           <children>
+                              <TreeTableView prefHeight="378.0" prefWidth="572.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                 <columns>
+                                    <TreeTableColumn prefWidth="331.0" text="酒店名" />
+                                    <TreeTableColumn prefWidth="117.0" text="订单数" />
+                                    <TreeTableColumn prefWidth="167.0" text="操作" />
+                                 </columns>
+                              </TreeTableView>
+                           </children>
+                        </AnchorPane>
+                     </content>
+                  </ScrollPane>
+               </content>
+            </Tab>
+            <Tab text="已执行">
+               <content>
+                  <ScrollPane prefHeight="302.0" prefWidth="576.0">
+                     <content>
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="373.0" prefWidth="616.0">
+                           <children>
+                              <TreeTableView prefHeight="378.0" prefWidth="572.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                 <columns>
+                                    <TreeTableColumn prefWidth="331.0" text="酒店名" />
+                                    <TreeTableColumn prefWidth="117.0" text="订单数" />
+                                    <TreeTableColumn prefWidth="167.0" text="操作" />
+                                 </columns>
+                              </TreeTableView>
+                           </children>
+                        </AnchorPane>
+                     </content>
+                  </ScrollPane>
+               </content>
+            </Tab>
+            <Tab text="已撤销">
+               <content>
+                  <ScrollPane prefHeight="302.0" prefWidth="576.0">
+                     <content>
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="373.0" prefWidth="616.0">
+                           <children>
+                              <TreeTableView prefHeight="378.0" prefWidth="572.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                 <columns>
+                                    <TreeTableColumn prefWidth="331.0" text="酒店名" />
+                                    <TreeTableColumn prefWidth="117.0" text="订单数" />
+                                    <TreeTableColumn prefWidth="167.0" text="操作" />
+                                 </columns>
+                              </TreeTableView>
+                           </children>
+                        </AnchorPane>
+                     </content>
+                  </ScrollPane>
+               </content>
+            </Tab>
+            <Tab text="异常">
+               <content>
+                  <ScrollPane prefHeight="302.0" prefWidth="576.0">
+                     <content>
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="373.0" prefWidth="616.0">
+                           <children>
+                              <TreeTableView prefHeight="378.0" prefWidth="572.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                 <columns>
+                                    <TreeTableColumn prefWidth="331.0" text="酒店名" />
+                                    <TreeTableColumn prefWidth="117.0" text="订单数" />
+                                    <TreeTableColumn prefWidth="167.0" text="操作" />
+                                 </columns>
+                              </TreeTableView>
+                           </children>
+                        </AnchorPane>
+                     </content>
+                  </ScrollPane>
+               </content>
+            </Tab>
+         </tabs>
+      </TabPane>
+      <Button layoutX="434.0" layoutY="23.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="83.0" text="搜索" />
+   </children>
 </AnchorPane>
