--- a/HMSWebManagerClient/src/webmanager_main_ui/WebSalerManage.fxml
+++ b/HMSWebManagerClient/src/webmanager_main_ui/WebSalerManage.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.control.*?>
@@ -7,31 +8,32 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="450.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="450.0" prefWidth="635.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
 	<!-- TODO Add Nodes -->
 	<children>
-      <SplitPane dividerPositions="0.14705882352941177" layoutX="96.0" layoutY="78.0" prefHeight="450.0" prefWidth="750.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-        <items>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" snapToPixel="false">
+      <TextField layoutX="128.0" layoutY="58.0" prefHeight="23.0" prefWidth="282.0" promptText="网站营销人员ID" />
+      <Button layoutX="424.0" layoutY="58.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="89.0" text="搜索" />
+      <Hyperlink layoutX="538.0" layoutY="59.0" text="新增..." />
+      <AnchorPane layoutX="142.0" layoutY="105.0" prefHeight="283.0" prefWidth="403.0">
+         <children>
+            <GridPane layoutX="28.0" layoutY="51.0" prefHeight="137.0" prefWidth="339.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
                <children>
-                  <ImageView fitHeight="66.0" fitWidth="70.0" layoutX="19.0" layoutY="41.0" pickOnBounds="true" preserveRatio="true" />
-                  <Label layoutX="9.0" layoutY="14.0" text="Manager Name" />
-                  <Accordion layoutY="166.0" prefHeight="72.0" prefWidth="107.0" AnchorPane.bottomAnchor="210.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="166.0">
-                    <panes>
-                      <TitledPane alignment="CENTER" animated="false" collapsible="false" expanded="false" text="会员管理" />
-                      <TitledPane alignment="CENTER" animated="false" collapsible="false" expanded="false" text="酒店人员管理" />
-                        <TitledPane alignment="CENTER" animated="false" collapsible="false" expanded="false" layoutX="10.0" layoutY="33.0" prefHeight="0.0" prefWidth="108.0" text="网站营销人员管理" />
-                    </panes>
-                  </Accordion>
+                  <Label text="ID" />
+                  <Label text="Label" GridPane.columnIndex="1" />
+                  <Label text="联系方式" GridPane.rowIndex="1" />
+                  <Label text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                </children>
-            </AnchorPane>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" snapToPixel="false">
-               <children>
-                  <TextField layoutX="127.0" layoutY="164.0" prefHeight="23.0" prefWidth="324.0" promptText="网站营销人员ID" />
-                  <Button layoutX="215.0" layoutY="271.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="148.0" text="搜索" />
-               </children>
-            </AnchorPane>
-        </items>
-      </SplitPane>
+            </GridPane>
+            <Button layoutX="320.0" layoutY="235.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="74.0" text="编辑" />
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
