--- a/HMSWebManagerClient/src/login_ui/Main.fxml
+++ b/HMSWebManagerClient/src/login_ui/Main.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="450.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="webmanager_main_ui.MainController">
+<AnchorPane prefHeight="450.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="login_ui.MainController">
    <children>
       <VBox layoutY="150.0">
          <children>
@@ -18,7 +18,7 @@
       <ImageView fitHeight="66.0" fitWidth="70.0" layoutX="24.0" layoutY="53.0" pickOnBounds="true" preserveRatio="true" />
       <Label layoutX="14.0" layoutY="26.0" text="Manager Name" />
       <Separator layoutX="112.0" orientation="VERTICAL" prefHeight="450.0" prefWidth="6.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="112.0" AnchorPane.topAnchor="0.0" />
-      <AnchorPane fx:id="memberManagePane" layoutX="118.0" prefHeight="450.0" prefWidth="635.0" visible="false">
+      <AnchorPane fx:id="memberManagePane" layoutX="118.0" prefHeight="450.0" prefWidth="635.0">
          <children>
             <fx:include source="MemberManage.fxml" />
          </children>
