--- a/HMSWebManagerClient/src/webmanager_main_ui/AddWebSalerDialog.fxml
+++ b/HMSWebManagerClient/src/webmanager_main_ui/AddWebSalerDialog.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="236.0" prefWidth="469.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="236.0" prefWidth="469.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="webmanager_main_ui.AddWebSalerDialogController">
    <children>
       <GridPane layoutX="99.0" layoutY="56.0" prefHeight="94.0" prefWidth="271.0">
         <columnConstraints>
