网站管理人员12.15更新

--- a/HMSWebManagerClient/src/login_ui/MemberManage.fxml
+++ b/HMSWebManagerClient/src/login_ui/MemberManage.fxml
@@ -8,28 +8,28 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="450.0" prefWidth="635.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="450.0" prefWidth="635.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="login_ui.MemberManageController">
 	<!-- TODO Add Nodes -->
 	<children>
-      <TextField layoutX="170.0" layoutY="45.0" prefHeight="23.0" prefWidth="248.0" promptText="会员ID" />
-      <Button layoutX="438.0" layoutY="45.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="85.0" text="搜索" />
-      <AnchorPane layoutX="35.0" layoutY="79.0" minHeight="0.0" minWidth="0.0" prefHeight="357.0" prefWidth="565.0" snapToPixel="false">
+      <TextField fx:id="inputField" layoutX="170.0" layoutY="45.0" prefHeight="23.0" prefWidth="248.0" promptText="会员ID" />
+      <Button fx:id="search" layoutX="438.0" layoutY="45.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="85.0" text="搜索" />
+      <AnchorPane fx:id="infoPane" layoutX="35.0" layoutY="79.0" minHeight="0.0" minWidth="0.0" prefHeight="357.0" prefWidth="565.0" snapToPixel="false">
          <children>
-            <Button layoutX="443.0" layoutY="320.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="108.0" text="编辑" />
+            <Button fx:id="edit" layoutX="443.0" layoutY="320.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="108.0" text="编辑" />
             <ImageView fitHeight="52.0" fitWidth="65.0" layoutX="201.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
-            <Label layoutX="359.0" layoutY="25.0" text="会员等级（点击头像可更换头像？）" />
+            <Label layoutX="359.0" layoutY="25.0" text="会员等级：" />
             <GridPane layoutX="94.0" layoutY="56.0" prefHeight="221.0" prefWidth="413.0">
                <children>
                   <Label text="        用户名" />
-                  <Label text="        姓名" GridPane.rowIndex="1" />
+                  <Label text="        信用值" GridPane.rowIndex="1" />
                   <Label text="        出生日期" GridPane.rowIndex="2" />
                   <Label text="        企业名称" GridPane.rowIndex="3" />
-                  <Label text="        手机号" GridPane.rowIndex="4" />
-                  <Label text="Label" GridPane.columnIndex="1" />
-                  <Label text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <Label text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                  <Label text="（普通会员则为无）" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                  <Label text="Label" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                  <Label text="        联系方式" GridPane.rowIndex="4" />
+                  <Label fx:id="nameLabel" text="Label" GridPane.columnIndex="1" />
+                  <Label fx:id="creditLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Label fx:id="birthdayLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <Label fx:id="companyLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                  <Label fx:id="contactLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="4" />
                </children>
                <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -43,6 +43,7 @@
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                </rowConstraints>
             </GridPane>
+            <Label fx:id="gradeLabel" layoutX="435.0" layoutY="25.0" text="Label" />
          </children>
       </AnchorPane>
    </children>
