--- a/HMSWebManagerClient/src/login_ui/EditHotelStaff.fxml
+++ b/HMSWebManagerClient/src/login_ui/EditHotelStaff.fxml
@@ -5,28 +5,22 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="250.0" prefWidth="469.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="login_ui.AddHotelStaffDialogController">
+<AnchorPane prefHeight="250.0" prefWidth="469.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="login_ui.EditHotelStaffInfoController">
    <children>
-      <GridPane layoutX="96.0" layoutY="42.0" prefHeight="140.0" prefWidth="277.0">
+      <GridPane layoutX="96.0" layoutY="54.0" prefHeight="117.0" prefWidth="277.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label text="酒店名称" />
-            <Label text="联系方式" GridPane.rowIndex="3" />
-            <TextField fx:id="hotelNameField" GridPane.columnIndex="1" />
-            <TextField fx:id="contactField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <TextField fx:id="passwordField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <Label text="密码" GridPane.rowIndex="2" />
-            <Label text="用户名" GridPane.rowIndex="1" />
-            <TextField fx:id="userNameField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Label text="联系方式" GridPane.rowIndex="1" />
+            <TextField fx:id="contactfield" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Label text="用户名" />
+            <TextField fx:id="namefield" GridPane.columnIndex="1" />
          </children>
       </GridPane>
       <Button fx:id="confirm" layoutX="130.0" layoutY="202.0" mnemonicParsing="false" onAction="#handleOk" prefHeight="23.0" prefWidth="89.0" text="确认" />
