--- a/HMSWebManagerClient/src/login_ui/EditMemberInfoDialog.fxml
+++ b/HMSWebManagerClient/src/login_ui/EditMemberInfoDialog.fxml
@@ -6,20 +6,18 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="461.0" prefWidth="403.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="430.0" prefWidth="403.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="login_ui.EditMemberInfoDialogController">
    <children>
-      <GridPane layoutX="87.0" layoutY="64.0" prefHeight="303.0" prefWidth="229.0">
+      <GridPane layoutX="87.0" layoutY="49.0" prefHeight="303.0" prefWidth="229.0">
          <children>
             <Label fx:id="userNameLabel" text="用户名" />
-            <Label text="姓名" GridPane.rowIndex="1" />
-            <Label text="出生日期" GridPane.rowIndex="3" />
-            <Label text="联系方式" GridPane.rowIndex="4" />
-            <TextField prefHeight="23.0" prefWidth="111.0" text="abc" GridPane.columnIndex="1" />
-            <TextField prefHeight="23.0" prefWidth="111.0" text="abc" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField prefHeight="23.0" prefWidth="111.0" text="abc" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-            <DatePicker GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <Label text="企业名称" GridPane.rowIndex="2" />
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Label text="出生日期" GridPane.rowIndex="2" />
+            <Label text="联系方式" GridPane.rowIndex="3" />
+            <TextField fx:id="namefield" prefHeight="23.0" prefWidth="111.0" GridPane.columnIndex="1" />
+            <TextField fx:id="contactfield" prefHeight="23.0" prefWidth="111.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <DatePicker fx:id="bdayPicker" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Label text="企业名称" GridPane.rowIndex="1" />
+            <TextField fx:id="companyfield" GridPane.columnIndex="1" GridPane.rowIndex="1" />
          </children>
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -30,10 +28,9 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
          </rowConstraints>
       </GridPane>
-      <Button layoutX="106.0" layoutY="404.0" mnemonicParsing="false" text="确认" />
-      <Button layoutX="242.0" layoutY="404.0" mnemonicParsing="false" text="取消" />
+      <Button fx:id="confirm" layoutX="114.0" layoutY="382.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="61.0" text="确认" />
+      <Button fx:id="cancel" layoutX="229.0" layoutY="382.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="61.0" text="取消" />
    </children>
 </AnchorPane>
