--- a/HMSWebManagerClient/src/login_ui/Main.fxml
+++ b/HMSWebManagerClient/src/login_ui/Main.fxml
@@ -10,7 +10,7 @@
    <children>
       <VBox layoutY="150.0">
          <children>
-            <Button fx:id="memberManageButton" layoutX="-3.0" layoutY="154.0" mnemonicParsing="false" onAction="#showMemberManagePane" prefHeight="34.0" prefWidth="112.0" text="会员管理" />
+            <Button fx:id="memberManageButton" layoutX="-3.0" layoutY="154.0" mnemonicParsing="false" onAction="#showMemberManagePane" prefHeight="34.0" prefWidth="112.0" text="会员" />
             <Button fx:id="hotelStaffManageButton" layoutX="-2.0" layoutY="201.0" mnemonicParsing="false" onAction="#showHotelStaffManagePane" prefHeight="34.0" prefWidth="112.0" text="酒店工作人员管理" />
             <Button fx:id="webSalerManageButton" layoutX="2.0" layoutY="328.0" mnemonicParsing="false" onAction="#showWebSalerManagePane" prefHeight="34.0" prefWidth="112.0" text="网站营销人员管理" />
          </children>
@@ -23,7 +23,7 @@
             <fx:include source="MemberManage.fxml" />
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="hotelStaffManagePane" layoutX="128.0" layoutY="10.0" prefHeight="450.0" prefWidth="635.0" visible="false">
+      <AnchorPane fx:id="hotelStaffManagePane" layoutX="118.0" prefHeight="450.0" prefWidth="635.0" visible="false">
          <children>
             <fx:include source="HotelStaffManage.fxml" />
          </children>
