modified:   HMSBl/src/helper/UserHelper.java 	modified:   HMSBl/src/login_bl_servlmpl/LoginBlServImpl.java 	modified:   HMSServer/src/user_data_servlmpl/UserDataServlmpl.java 	modified:   HMSWebManagerClient/src/login_ui/AddWebSalerDialog.fxml 	modified:   HMSWebManagerClient/src/login_ui/AddWebSalerDialogController.java 	modified:   HMSWebManagerClient/src/login_ui/EditHotelStaffInfoController.java 	modified:   HMSWebManagerClient/src/login_ui/EditMemberInfoDialogController.java 	modified:   HMSWebManagerClient/src/login_ui/EditWebSalerInfoController.java 	modified:   HMSWebManagerClient/src/login_ui/HotelStaffManage.fxml 	modified:   HMSWebManagerClient/src/login_ui/HotelStaffManageController.java 	copied:     HMSWebSalerClient/src/login_ui/Login.fxml -> HMSWebManagerClient/src/login_ui/Login.fxml 	modified:   HMSWebManagerClient/src/login_ui/LoginController.java 	modified:   HMSWebManagerClient/src/login_ui/MainApp.java 	modified:   HMSWebManagerClient/src/login_ui/MainController.java 	modified:   HMSWebManagerClient/src/login_ui/MemberManageController.java 	new file:   HMSWebManagerClient/src/login_ui/property.css 	modified:   HMSWebSalerClient/src/login_ui/CreditRechargeDialogController.java 	modified:   HMSWebSalerClient/src/login_ui/Login.fxml 	modified:   HMSWebSalerClient/src/login_ui/LoginController.java 	modified:   HMSWebSalerClient/src/login_ui/MainApp.java 	modified:   HMSWebSalerClient/src/login_ui/MainController.java 	new file:   HMSWebSalerClient/src/login_ui/property.css

--- a/HMSWebManagerClient/src/login_ui/HotelStaffManage.fxml
+++ b/HMSWebManagerClient/src/login_ui/HotelStaffManage.fxml
@@ -29,13 +29,13 @@
               </rowConstraints>
                <children>
                   <Label text="酒店名称" />
-                  <Label fx:id="hotelNameLabel" text="Label" GridPane.columnIndex="1" />
+                  <Label fx:id="hotelNameLabel" GridPane.columnIndex="1" />
                   <Label text="ID" GridPane.rowIndex="2" />
-                  <Label fx:id="idLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <Label fx:id="idLabel" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                   <Label text="联系方式" GridPane.rowIndex="3" />
-                  <Label fx:id="contactLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                  <Label fx:id="contactLabel" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                   <Label text="用户名" GridPane.rowIndex="1" />
-                  <Label fx:id="nameLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Label fx:id="nameLabel" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                </children>
             </GridPane>
             <Button fx:id="edit" layoutX="320.0" layoutY="235.0" mnemonicParsing="false" onAction="#editHotelStaffInfo" prefHeight="23.0" prefWidth="74.0" text="编辑" />
