--- a/HMSWebManagerClient/src/login_ui/AddWebSalerDialog.fxml
+++ b/HMSWebManagerClient/src/login_ui/AddWebSalerDialog.fxml
@@ -20,10 +20,10 @@
          <children>
             <Label text="用户名" />
             <Label text="联系方式" GridPane.rowIndex="2" />
-            <TextField GridPane.columnIndex="1" />
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="nameField" GridPane.columnIndex="1" />
+            <TextField fx:id="passwordField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <Label text="密码" GridPane.rowIndex="1" />
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="contactField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
          </children>
       </GridPane>
       <Button fx:id="confirm" layoutX="167.0" layoutY="183.0" mnemonicParsing="false" onAction="#handleOk" prefHeight="23.0" prefWidth="136.0" text="确认" />
