--- a/HMSWebManagerClient/src/login_ui/Login.fxml
+++ b/HMSWebManagerClient/src/login_ui/Login.fxml
@@ -10,17 +10,17 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="login_ui.LoginController">
    <children>
-      <Button fx:id="Confirm" layoutX="193.0" layoutY="313.0" mnemonicParsing="false" onAction="#checkLoginInfo" prefHeight="35.0" prefWidth="300.0">
+      <Button id="login" fx:id="Confirm" layoutX="193.0" layoutY="313.0" mnemonicParsing="false" onAction="#checkLoginInfo" prefHeight="35.0" prefWidth="300.0" stylesheets="@property.css" text="登 录" textFill="#fdfeff">
          <font>
             <Font size="15.0" />
          </font>
-         <effect>
-            <ImageInput>
-               <source>
-                  <Image url="@login.png" />
-               </source>
-            </ImageInput>
-         </effect>
+         <!--<effect>-->
+            <!--<ImageInput>-->
+               <!--<source>-->
+                  <!--<Image url="@login.png" />-->
+               <!--</source>-->
+            <!--</ImageInput>-->
+         <!--</effect>-->
       </Button>
       <TextField fx:id="userNameField" layoutX="193.0" layoutY="134.0" prefHeight="35.0" prefWidth="300.0" promptText="用户名" />
       <Label layoutX="283.0" layoutY="71.0" text="酒店管理系统">
